# pyforce

./: .gitignore  main.py  map.tmx  pyproject.toml  requirements.txt  settings.json  structure.md  temp.sh
assets/map/: TX Tileset Ground.tsx  map.tmx  map3.tmx
game_data/: __init__.py  effects_manager.py  json_manager.py  model.py  particle.py  physics.py  pickup.py  pickup_manager.py
game_data/entities/: __init__.py  enemy.py  entity_helper.py  entity_manager.py  entity_utils.py  patrol_path.py  player.py  state.py  state_manager.py  weapon.py
game_data/weaponry/: __init__.py  ammo.py  bullet.py  weapon.py
game_state/: __init__.py  controller.py  input_handler.py  json_manager.py
game_view/: __init__.py  camera.py  effects_renderer.py  entity_renderer.py  map_loader.py  map_renderer.py  sprite_loader.py  ui.py  view.py
pyforce/: main.py
pyforce/game_data/: particle.py  physics.py  pickup.py  pickup_manager.py
pyforce/game_state/: __init__.py  controller.py  input_handler.py
pyforce/game_view/: map_renderer.py  ui.py  view.py
pyforce/shared/: __init__.py  direction.py  enemy_enum.py  where.py
shared/: __init__.py  debug_elements.py  direction.py  enemy_enum.py  game_state.py  render_info.py  state_name.py  weapon_utils.py  where.py
src/pyforce/: __main__.py
zip/: pyproject.toml  requirements.txt  structure.md
zip/game_data/: effects_manager.py  physics.py  pickup.py
zip/game_state/: controller.py  input_handler.py
zip/game_view/: entity_renderer.py  map_renderer.py  sprite_loader.py  view.py
zip/shared/: effects_enum.py  where.py
(+76 files in other folders)
